# taurus

./: .gitignore  Cargo.toml  README.md  index.gmi
.builds/: ci.yml
contrib/: generate_cert.sh
src/: config.rs  error.rs  gemini.rs  io.rs  logger.rs  main.rs
