[package]
name = "taurus"
description = "A concurrent gemini server"
version = "0.0.2"
authors = ["Garrit Franke <garritfranke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
native-tls = "0.2.4"
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
anyhow = "1.0.34"
clap = "2.33.3"
mime_guess = "2.0.3"
thiserror = "1.0.22"
